@@ -29,7 +29,10 @@ if ($_REQUEST['attr'] == 'setup-options') {
     $options[XPDO_TRANSPORT_PACKAGE_ACTION] = empty($package->installed)
         ? XPDO_TRANSPORT_ACTION_INSTALL
         : XPDO_TRANSPORT_ACTION_UPGRADE;
-    $attr = include $modx->getOption('core_path').'packages/'.$attr;
+    $f = $modx->getOption('core_path').'packages/'.$attr;
+    if (file_exists($f)) {
+        $attr = include $f;
+    } else { $attr = false; }
     ob_end_clean();
 }
 if ($attr == false) $attr = '';
